--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 	$(document).ready(function() {
 		$('#fullpage').fullpage(
 			{
-				autoScrolling: false,
 				fitToSectionDelay: 100,
      		    scrollBar: true,
 				fixedElements: '#progressBar'
@@ -164,41 +163,88 @@
 </progress>
 
 <div id="fullpage">
-	<div class="section optionOne">
+	<div class="section optionOne" style = "background: linear-gradient(
+      rgba(145,226,161, 0.65), 
+      rgba(145,226,161, 0.65)), url(chandra-maharzan-770.jpg);">
+		<h1>Make America Great Again.</h1>
+	</div>
+	<div class="section optionTwo">
 		<div class = "content firstSpot">
-			<h1>Title<h1>
+			<p>You hear that phrase a lot these days.<p>
 		</div>
 		<div class = "content secondSpot">
-			<h1>Title2<h1>
+			<p>But what made America great in the first place?<p>
 		</div>
 	</div>
-	<div class="section optionTwo">
+	<div class="section optionOne" style = "background: linear-gradient(
+      rgba(145,226,161, 0.65), 
+      rgba(145,226,161, 0.65)), url(Unemployed_men.jpg);">
 		<div class = "content firstSpot">
-			<h1>Title<h1>
-		</div>
-	</div>
-	<div class="section optionOne">
-		<div class = "content firstSpot">
-			<h1>Title<h1>
-		</div>
-	</div>
-	<div class="section optionTwo">
-		<div class = "content firstSpot">
-			<h1>Title<h1>
+			<p>Over 80 years ago, America was hit by the Great Depression.<p>
 		</div>
 		<div class = "content secondSpot">
-			<h1>Title2<h1>
+			<p>People lost their jobs. And for over a decade the American people struggled through one of the darkest times this country has ever faced.</p>
+		</div>
+	</div>
+	<div class="section optionTwo" style = "background: linear-gradient(
+      rgba(131,179,219, 0.65), 
+      rgba(131,179,219, 0.65)), url(ww2germany.jpg);">
+		<div class = "content firstSpot">
+			<p>However, around the world, a global threat to humanity had started to grow. It spread, conquering country after country.<p>
 		</div>
 	</div>
 	<div class="section optionOne">
 		<div class = "content firstSpot">
-			<h1>Title<h1>
+			<p>America hesitated. Even after the evil touched our shores, there were those who argued we needed to focus on rebuilding at home.<p>
+		</div>
+	</div>
+	<div class="section optionTwo">
+			<h1>But greatness isn't defined by what you do when it's easy.<br><br>It's defined by what you do when it's hard.<h1>
+	</div>
+	<div class="section optionOne">
+		<div class = "content firstSpot">
+			<p>Over the next 40 years America went to war.</p>
+		</div>
+		<div class = "content secondSpot">
+			<p>Debt. Lives lost. And all of it over seas.</p>
+		</div>
+	</div>
+	<div class="section optionTwo" style = "background: linear-gradient(
+      rgba(131,179,219, 0.65), 
+      rgba(131,179,219, 0.65)), url(ReaganBerlinWall.jpg);">
+		<div class = "content firstSpot">
+			<p>But in a defining era of greatness, America pushed back against the evils of the world. Not without mistakes, no, but with the American resilience the country is now known around the world for.</p>
+		</div>
+	</div>
+	<div class="section optionOne">
+		<div class = "content firstSpot">
+			<p>But, for what? Why did we do all of this?</p>
+		</div>
+	</div>
+	<div class="section optionTwo">
+			<h1>Because it was the right thing to do.<h1>
+	</div>
+	<div class="section optionOne">
+		<div class = "content firstSpot">
+			<p>Greatness isn't something you give to yourself. It is something others call you when they speak of you. America became great not by focusing on itself but by doing what was right for the world.</p>
+		</div>
+	</div>
+	<div class="section optionTwo">
+			<h1>Today we face a new threat.<h1>
+	</div>
+	<div class="section optionOne">
+		<div class = "content firstSpot">
+			<p>ISIS is evil and must be defeated. But the lives they take are in the thousands.</p>
 		</div>
 	</div>
 	<div class="section optionTwo">
 		<div class = "content firstSpot">
-			<h1>Title<h1>
+			<p>Cimate Change is a global threat.<br><br>One with the potential of taking millions of lives.<br><br>And once again America is hesitating.</p>
 		</div>
+	</div>
+	<div class="section optionOne">
+		<h1>We could become great again.</h1>
+		<h1>We really could.</h1>
 	</div>
 </div>
 </body>
