--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       rgba(131,179,219, 0.65), 
       rgba(131,179,219, 0.65)), url(ww2germany.jpg);">
 		<div class = "content firstSpot">
-			<p>However, around the world, a global threat to humanity had started to grow. It spread, conquering country after country.<p>
+			<p>However, around the world, a threat to humanity had started to grow. It spread, conquering country after country.<p>
 		</div>
 	</div>
 	<div class="section optionOne">
@@ -199,14 +199,14 @@
 		</div>
 	</div>
 	<div class="section optionTwo">
-			<h1>But greatness isn't defined by what you do when it's easy.<br><br>It's defined by what you do when it's hard.<h1>
+			<h1>But greatness isn't defined by what you do when it's <em>easy</em>.<br><br>It's defined by what you do when it's <b><u>hard</u></b>.<h1>
 	</div>
 	<div class="section optionOne">
 		<div class = "content firstSpot">
-			<p>Over the next 40 years America went to war.</p>
+			<p>America finally went to war. And then after that it went to another one.</p>
 		</div>
 		<div class = "content secondSpot">
-			<p>Debt. Lives lost. And all of it over seas.</p>
+			<p>40 years.<br><br>Debt. Lives lost. And all of it over seas.</p>
 		</div>
 	</div>
 	<div class="section optionTwo" style = "background: linear-gradient(
@@ -226,7 +226,7 @@
 	</div>
 	<div class="section optionOne">
 		<div class = "content firstSpot">
-			<p>Greatness isn't something you give to yourself. It is something others call you when they speak of you. America became great not by focusing on itself but by doing what was right for the world.</p>
+			<p>Greatness isn't something you give to yourself. It is something others give to you when they speak of you. America became great not by focusing on itself but by doing what was right for the world.</p>
 		</div>
 	</div>
 	<div class="section optionTwo">
@@ -234,15 +234,34 @@
 	</div>
 	<div class="section optionOne">
 		<div class = "content firstSpot">
-			<p>ISIS is evil and must be defeated. But the lives they take are in the thousands.</p>
+			<p>ISIS is an evil that must be ended. But America has shown that it can and will deal with agents of terror with resolve.</p>
+		</div>
+		<div class = "content secondSpot">
+			<p>The bigger threat to this country is not only one that we unknowingly made, but one that is unlike any threat we've faced before.</p>
 		</div>
 	</div>
 	<div class="section optionTwo">
 		<div class = "content firstSpot">
-			<p>Cimate Change is a global threat.<br><br>One with the potential of taking millions of lives.<br><br>And once again America is hesitating.</p>
+			<p>Cimate Change is a global threat.<br><br>One with the potential of taking millions of lives.</p>
 		</div>
 	</div>
 	<div class="section optionOne">
+		<div class = "content firstSpot">
+			<p>Natural disasters & permananet damage from a drastically changing climate has already taken thousands of lives.</p>
+		</div>
+		<div class = "content secondSpot">
+			<p>And yes, there are serious tradeoffs. But we can work through those because the consequences of not doing anything will be much worse.</p>
+		</div>
+	</div>
+	<div class="section optionTwo">
+		<div class = "content firstSpot">
+			<p>Now, arguably more than ever, the world needs strong leadership to tackle this issue we all face.</p>
+		</div>
+	</div>
+	<div class="section optionOne">
+		<h1>But once again America is hesitating.</h1>
+	</div>
+	<div class="section optionTwo">
 		<h1>We could become great again.</h1>
 		<h1>We really could.</h1>
 	</div>
