--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
 	<div class="section optionOne" style = "background: linear-gradient(
       rgba(145,226,161, 0.65), 
       rgba(145,226,161, 0.65)), url(Unemployed_men.jpg);">
-		<div class = "content firstSpot">
+		<div class = "content firstSpot imgContent">
 			<p>Over 80 years ago, America was hit by the Great Depression.<p>
 		</div>
-		<div class = "content secondSpot">
+		<div class = "content secondSpot imgContent">
 			<p>People lost their jobs. And for over a decade the American people struggled through one of the darkest times this country has ever faced.</p>
 		</div>
 	</div>
 	<div class="section optionTwo" style = "background: linear-gradient(
       rgba(131,179,219, 0.65), 
       rgba(131,179,219, 0.65)), url(ww2germany.jpg);">
-		<div class = "content firstSpot">
+		<div class = "content firstSpot imgContent">
 			<p>However, around the world, a threat to humanity had started to grow. It spread, conquering country after country.<p>
 		</div>
 	</div>
@@ -201,18 +201,20 @@
 	<div class="section optionTwo">
 			<h1>But greatness isn't defined by what you do when it's <em>easy</em>.<br><br>It's defined by what you do when it's <b><u>hard</u></b>.<h1>
 	</div>
-	<div class="section optionOne">
-		<div class = "content firstSpot">
+	<div class="section optionOne" style = "background: linear-gradient(
+      rgba(145,226,161, 0.65), 
+      rgba(145,226,161, 0.65)), url(Approaching_Omaha.jpg);">
+		<div class = "content firstSpot imgContent">
 			<p>America finally went to war. And then after that it went to another one.</p>
 		</div>
-		<div class = "content secondSpot">
+		<div class = "content secondSpot imgContent">
 			<p>40 years.<br><br>Debt. Lives lost. And all of it over seas.</p>
 		</div>
 	</div>
 	<div class="section optionTwo" style = "background: linear-gradient(
       rgba(131,179,219, 0.65), 
       rgba(131,179,219, 0.65)), url(ReaganBerlinWall.jpg);">
-		<div class = "content firstSpot">
+		<div class = "content firstSpot imgContent">
 			<p>But in a defining era of greatness, America pushed back against the evils of the world. Not without mistakes, no, but with the American resilience the country is now known around the world for.</p>
 		</div>
 	</div>
@@ -221,7 +223,9 @@
 			<p>But, for what? Why did we do all of this?</p>
 		</div>
 	</div>
-	<div class="section optionTwo">
+	<div class="section optionTwo" style = "background: linear-gradient(
+      rgba(131,179,219, 0.65), 
+      rgba(131,179,219, 0.65)), url(ladyLib.jpg);">
 			<h1>Because it was the right thing to do.<h1>
 	</div>
 	<div class="section optionOne">
@@ -240,8 +244,10 @@
 			<p>The bigger threat to this country is not only one that we unknowingly made, but one that is unlike any threat we've faced before.</p>
 		</div>
 	</div>
-	<div class="section optionTwo">
-		<div class = "content firstSpot">
+	<div class="section optionTwo" style = "background: linear-gradient(
+      rgba(131,179,219, 0.65), 
+      rgba(131,179,219, 0.65)), url(climateChange.jpg);">
+		<div class = "content firstSpot imgContent">
 			<p>Cimate Change is a global threat.<br><br>One with the potential of taking millions of lives.</p>
 		</div>
 	</div>
@@ -261,7 +267,9 @@
 	<div class="section optionOne">
 		<h1>But once again America is hesitating.</h1>
 	</div>
-	<div class="section optionTwo">
+	<div class="section optionTwo" style = "background: linear-gradient(
+      rgba(131,179,219, 0.65), 
+      rgba(131,179,219, 0.65)), url(flagFinal.jpg);">
 		<h1>We could become great again.</h1>
 		<h1>We really could.</h1>
 	</div>
