--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> | A 135 Production</title>
-	<meta property="og:title" content=" | A 135 Production" />
+	<title>American Hesitation | A 135 Production</title>
+	<meta property="og:title" content="American Hesitation | A 135 Production" />
 	<meta property="og:description" 
-	  content="" />
-	<meta property="og:image" content="" />
+	  content="We really can make America great again." />
+	<meta property="og:image" content="chandra-maharzan-770.jpg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	
@@ -272,6 +272,15 @@
       rgba(131,179,219, 0.65)), url(flagFinal.jpg);">
 		<h1>We could become great again.</h1>
 		<h1>We really could.</h1>
+	</div>
+	<div class="section optionOne">
+		<div class = "content firstSpot">		
+			<h3>Amazing Photography Credit</h3>
+			<p><a href="https://unsplash.com/photos/9GLaucc3HqY">Chandra Maharzan</a></p>
+			<p><a href="https://unsplash.com/search/statue-of-liberty?photo=H6mCeW7B9KY">Zoltan Kovacs</a></p>
+			<p><a href="https://unsplash.com/photos/YhYeJLoA8N8">Damjan Dobrila</a></p>			
+			<p><a href="https://unsplash.com/photos/-rTqa1F_FaU">Jake Ingle</a></p>			
+		</div>
 	</div>
 </div>
 </body>
