--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
 			<p><a href="https://unsplash.com/photos/9GLaucc3HqY">Chandra Maharzan</a></p>
 			<p><a href="https://unsplash.com/search/statue-of-liberty?photo=H6mCeW7B9KY">Zoltan Kovacs</a></p>
 			<p><a href="https://unsplash.com/photos/YhYeJLoA8N8">Damjan Dobrila</a></p>			
-			<p><a href="https://unsplash.com/photos/-rTqa1F_FaU">Jake Ingle</a></p>			
+			<p><a href="https://unsplash.com/photos/-rTqa1F_FaU">Jake Ingle</a></p>
+			<p>Written & Coded by <a href = "http://bit.ly/15Tv57Z">this guy</a></p>			
 		</div>
 	</div>
 </div>
