--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>American Hesitation | A 135 Production</title>
-	<meta property="og:title" content="American Hesitation | A 135 Production" />
+	<meta property="og:title" content="Make America Hesitate Again | A 135 Production" />
 	<meta property="og:description" 
 	  content="We really can make America great again." />
 	<meta property="og:image" content="chandra-maharzan-770.jpg" />
