--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>American Hesitation | A 135 Production</title>
+	<title>Make America Hesitate Again | A 135 Production</title>
 	<meta property="og:title" content="Make America Hesitate Again | A 135 Production" />
 	<meta property="og:description" 
 	  content="We really can make America great again." />
