--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:title" content="Make America Hesitate Again | A 135 Production" />
 	<meta property="og:description" 
 	  content="We really can make America great again." />
-	<meta property="og:image" content="chandra-maharzan-770.jpg" />
+	<meta property="og:image" content="flagFinal.jpg"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	
@@ -20,6 +20,16 @@
 	
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-100254979-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 
 <script>
 	
@@ -155,6 +165,14 @@
 	
 </head>
 <body>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=378768819186943";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 	
 <progress value="0" id="progressBar">
   <div class="progress-container">
@@ -282,6 +300,11 @@
 			<p><a href="https://unsplash.com/photos/-rTqa1F_FaU">Jake Ingle</a></p>
 			<p>Written & Coded by <a href = "http://bit.ly/15Tv57Z">this guy</a></p>			
 		</div>
+		<div class = "content secondSpot">
+			<h3>Share With Your Friends</h3>
+			<div class="fb-share-button" data-href="http://maha.a135.pro" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fmaha.a135.pro%2F&amp;src=sdkpreparse">Share</a></div>
+		</div>
+		
 	</div>
 </div>
 </body>
