--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		</div>
 		<div class = "content secondSpot">
 			<div class="fb-share-button" data-href="http://maha.a135.pro" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fmaha.a135.pro%2F&amp;src=sdkpreparse">Share</a></div>
-			<a href="http://maha.a135.pro" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<a href="http://maha.a135.pro" class="twitter-share-button" data-show-count="false" data-size="large" data-text="Make America Hesitate Again">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 		
 	</div>
